# metabalus

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  untitled.ui
config/: audio.yaml  keymap.yaml
config/profiles/: default.yaml
config/wavetables/: saw.wt  sharkFin.wt  sigmoid.wt  sine.wt  square.wt  triangle.wt
qml/: Main.qml  qmldir
qml/screens/: MainScreen.qml  MainScreenUI.ui.qml
scripts/: build.bat  build.ps1  build.sh  example_wavetable.py  generate_wavetable.py  install_dependencies.ps1  install_dependencies.sh
src/: AppController.cpp  AppController.h  ConfigInterface.cpp  ConfigInterface.h  KeyboardController.cpp  KeyboardController.h  MainWindow.cpp  MainWindow.h  MidiController.cpp  MidiController.h  NoteQueue.cpp  NoteQueue.h  ParameterStore.cpp  ParameterStore.h  main.cpp  mainwindow.cpp  mainwindow.hpp
src/synth/: AudioEngine.cpp  AudioEngine.h  AudioStream.cpp  AudioStream.h  Envelope.cpp  Envelope.h  Filter.cpp  Filter.h  Oscillator.cpp  Oscillator.h  ScopeBuffer.cpp  ScopeBuffer.h  Synth.cpp  Synth.h  Voice.cpp  Voice.h  WavetableController.cpp  WavetableController.h
src/ui/: MainWindow.cpp  MainWindow.h  MainWindow.ui
src/ui/widgets/: SmartSlider.cpp  SmartSlider.h  SmartSlider.ui
src/ui/widgets/EnvelopeGenerator/: EnvelopeGenerator.cpp  EnvelopeGenerator.h  EnvelopeGenerator.ui
src/ui/widgets/Scope/: Scope.cpp  Scope.h  Scope.ui
src/ui/widgets/SmartSlider/: SmartSlider.cpp  SmartSlider.h  SmartSlider.ui
src/widgets/: SmartSlider.cpp  SmartSlider.h
